fix height on small screen

--- a/client/src/Components/Card/card.css
+++ b/client/src/Components/Card/card.css
@@ -5,13 +5,11 @@
 }
 .plant {
     /* position: relative; */
-    
-
-    
+    /* color: rgb(17, 59, 17);  */
 }
 .name {
     padding: 5px;
-    font-weight: 700 !important;
+    font-weight: 800 !important;
 
 }
 .description {
@@ -22,4 +20,11 @@
 }
 .price{
     color:#000;
+    font-weight: 600 !important;
 }
+@media (max-width: 450px) {
+   .plant{
+      height: 140px !important;
+    }
+    
+  }
